--- a/Documentação.html
+++ b/Documentação.html
@@ -13,12 +13,11 @@
     <script class="u-script" type="text/javascript" src="page.js" defer=""></script>
     <link id="u-theme-google-font" rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:100,100i,300,300i,400,400i,500,500i,700,700i,900,900i|Open+Sans:300,300i,400,400i,500,500i,600,600i,700,700i,800,800i">
     
-    
     <script type="application/ld+json">{
 		"@context": "http://schema.org",
 		"@type": "Organization",
 		"name": "PECI-21-22-Grupo04",
-		"logo": "images/LogoMakr-1XK2Xn.png",
+		"logo": "images/runX_logo.png",
 		"sameAs": [
 				"https://github.com/PECI-21-22-Grupo04"
 		]
@@ -28,8 +27,8 @@
     <meta property="og:type" content="website">
   </head>
   <body class="u-body u-stick-footer u-xl-mode"><header class="u-align-center-sm u-align-center-xs u-clearfix u-header u-sticky u-sticky-fac8 u-white u-header" id="sec-8e81"><div class="u-clearfix u-sheet u-sheet-1">
-        <a href="Página-Principal.html" data-page-id="696708587" class="u-image u-logo u-image-1" title="Página Inicial" data-image-width="200" data-image-height="110">
-          <img src="images/LogoMakr-1XK2Xn.png" class="u-logo-image u-logo-image-1">
+        <a href="Página-Principal.html" data-page-id="696708587" class="u-image u-logo u-image-1" title="Página Inicial" data-image-width="1024" data-image-height="1024">
+          <img src="images/runX_logo.png" class="u-logo-image u-logo-image-1">
         </a>
         <nav class="u-align-left u-menu u-menu-one-level u-offcanvas u-menu-1" data-position="" data-responsive-from="MD">
           <div class="menu-collapse" style="font-size: 1rem; letter-spacing: 0px; font-weight: 700;">
