small fix in the database docs

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="keywords" content="​REMOTE AND INDIVIDUAL PHYSICAL EXERCISE SUPPORT SYSTEM, About this project">
     <meta name="description" content="">
     <meta name="page_type" content="np-template-header-footer-from-plugin">
-    <title>paginaprincipal</title>
+    <title>Homepage</title>
     <link rel="stylesheet" href="page.css" media="screen">
 <link rel="stylesheet" href="paginaprincipal.css" media="screen">
     <script class="u-script" type="text/javascript" src="jquery.js" defer=""></script>
