--- a/documentacao.html
+++ b/documentacao.html
@@ -6,7 +6,7 @@
     <meta name="keywords" content="">
     <meta name="description" content="">
     <meta name="page_type" content="np-template-header-footer-from-plugin">
-    <title>documentacao</title>
+    <title>Documentação</title>
     <link rel="stylesheet" href="page.css" media="screen">
 <link rel="stylesheet" href="documentacao.css" media="screen">
     <script class="u-script" type="text/javascript" src="jquery.js" defer=""></script>
